--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
   </head>
   <body>
     <h1>Hello from Varun’s GA4 test site!</h1>
+    <button onclick="gtag('event', 'signup_click', {
+  'event_category': 'engagement',
+  'event_label': 'Signup Button',
+  'value': 1
+})">Sign Up Now</button>
   </body>
 </html>
