--- a/index.html
+++ b/index.html
@@ -21,5 +21,71 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   'event_label': 'Signup Button',
   'value': 1
 })">Sign Up Now</button>
+
+    <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    h1 {
+      color: #007bff;
+    }
+    button, a {
+      display: inline-block;
+      margin-top: 0.5rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      color: #fff;
+      background-color: #007bff;
+      border: none;
+      border-radius: 4px;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    button:hover, a:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to Varun's GA4 Practice Site</h1>
+
+  <div class="section">
+    <h2>1. Sign Up Section</h2>
+    <button id="signUpBtn">Sign Up Now</button>
+  </div>
+
+  <div class="section">
+    <h2>2. Contact Section</h2>
+    <button id="contactBtn">Contact Us</button>
+  </div>
+
+  <div class="section">
+    <h2>3. Download Resource</h2>
+    <a href="#" id="downloadBtn">Download Brochure</a>
+  </div>
+
+  <div class="section">
+    <h2>4. Subscribe</h2>
+    <input type="email" placeholder="Enter your email">
+    <button id="subscribeBtn">Subscribe</button>
+  </div>
+
+  <div class="section">
+    <h2>5. Learn More</h2>
+    <a href="#" id="learnMoreBtn">Learn More</a>
+  </div>
+
+  <div class="section">
+    <h2>6. Product Section</h2>
+    <p>Sample Product - ₹999</p>
+    <button id="addToCartBtn">Add to Cart</button>
+    <button id="buyNowBtn">Buy Now</button>
+  </div>
   </body>
 </html>
