--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-55KCJGXT');</script>
 <!-- End Google Tag Manager -->
   </head>
+  <a href="thankyou.html">
+  <button id="buy-now-button">Buy Now</button>
+</a>
   <body>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55KCJGXT"
