--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-55KCJGXT');</script>
 <!-- End Google Tag Manager -->
   </head>
-  <a href="thankyou.html">
-  <button id="buy-now-button">Buy Now</button>
-</a>
+  
   <body>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55KCJGXT"
@@ -87,6 +85,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="section">
     <h2>6. Product Section</h2>
     <p>Sample Product - ₹999</p>
+
+    <a href="thankyou.html">
+  <button id="buy-now-button">Buy Now</button>
+</a>
+  </DIV>
     <button id="addToCartBtn">Add to Cart</button>
     <button id="buyNowBtn">Buy Now</button>
   </div>
