--- a/thankyou.html
+++ b/thankyou.html
@@ -176,6 +176,48 @@ window.dataLayer.push({
     }
   ]
 });
+      <script>
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({
+  event: "purchase",
+  ecommerce: {
+    transaction_id: "TXN123456",
+    value: 99.99,
+    currency: "USD",
+    coupon: "SUMMER25",
+    payment_type: "credit card",
+    items: [
+      {
+        item_id: "SKU123",
+        item_name: "Premium Course Access",
+        price: 99.99,
+        quantity: 1
+      }
+    ]
+  }
+});
+      <script>
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({
+  event: "purchase",
+  ecommerce: {
+    transaction_id: "TXN12345",
+    value: 99.99,
+    currency: "USD",
+    coupon: "SUMMER25",
+    payment_type: "credit card",
+    items: [
+      {
+        item_id: "SKU123",
+        item_name: "Product Name",
+        price: 49.99,
+        quantity: 2
+      }
+    ]
+  }
+});
+</script>
+</script>
 </script>
     <a class="btn" href="index.html">← Back to Home</a>
   </div>
