Update thankyou p .html

--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     gtag('config', 'G-S6MFWSG27B');
 
     // Fire conversion event
-    gtag('event', 'purchase_complete', {
+    gtag('event', 'purchase', {
       value: 99.99,
       currency: 'INR',
       transaction_id: 'TXN123456',
