--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       document.getElementById('thank-you').style.display = 'block';
 
       // Fire GA4 purchase_complete event
-      gtag('event', 'purchase_complete', {
+      gtag('event', 'purchase', {
         value: 99.99,
         currency: 'INR',
         transaction_id: 'TXN123456',
@@ -209,7 +209,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>
 window.dataLayer = window.dataLayer || [];
 window.dataLayer.push({
-  event: "purchase_complete",
+  event: "purchase",
   transaction_id: "TXN12345",
   value: 99.99,
   currency: "USD",
