--- a/thankyou.html
+++ b/thankyou.html
@@ -3,6 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You!</title>
+   <script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-55KCJGXT');
+  </script>
+  
+  <!-- GA4 Global Site Tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6MFWSG27B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-S6MFWSG27B');
+  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
     window.dataLayer.push({
@@ -26,26 +42,15 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- GTM Script -->
-  <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-55KCJGXT');
-  </script>
+
+  
 
   <!-- GA4 Global Site Tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6MFWSG27B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-S6MFWSG27B');
-  </script>
-
+  
   <style>
-    body {
+    body 
+     
+    {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f6f8;
       display: flex;
@@ -123,14 +128,16 @@
       color: #222;
     }
   </style>
+   
 </head>
 
 <body>
-  <!-- GTM Fallback for No-JS -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55KCJGXT"
     height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
+  <!-- GTM Fallback for No-JS -->
+ 
 
   <div class="thank-you-box">
     <h1>🎉 Thank You!</h1>
