--- a/thankyou.html
+++ b/thankyou.html
@@ -147,7 +147,7 @@
   window.dataLayer.push({
     event: "purchase",
     debug_mode: true,
-    ecommerce: {
+    purchase: {
       transaction_id: "TXN123456",
       value: 99.99,
       currency: "USD",
