px updated thankyou.html

--- a/thankyou.html
+++ b/thankyou.html
@@ -5,27 +5,43 @@
   <title>Thank You!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Google Tag Manager -->
+  <!-- 1️⃣  Push purchase data to the dataLayer BEFORE GTM loads -->
   <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    window.dataLayer = window.dataLayer || [];
+    dataLayer.push({
+      event: 'purchase',          /*  Trigger name for GTM */
+      debug_mode: true,
+      ecommerce: {
+        transaction_id: 'TXN123456',
+        value: 99.99,
+        currency: 'USD',
+        coupon: 'SUMMER25',
+        payment_type: 'credit_card',
+        items: [
+          {
+            item_id: 'SKU123',
+            item_name: 'Premium Course Access',
+            price: 99.99,
+            quantity: 1
+          }
+        ]
+      }
+    });
+  </script>
+
+  <!-- 2️⃣  Google Tag Manager container (single source of truth for GA4) -->
+  <script>
+    (function(w,d,s,l,i){
+      w[l]=w[l]||[];
+      w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+      var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
+      j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+      f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-55KCJGXT');
   </script>
 
-  <!-- ✅ GA4 Global Site Tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6MFWSG27B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-S6MFWSG27B');
-  </script>
-
-  <!-- ✅ Purchase Event: Data Layer Push -->
-
-  <!-- ✅ Styles -->
+  <!-- 3️⃣  Page styles (unchanged) -->
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -36,7 +52,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .thank-you-box {
       background: #fff;
       padding: 2rem 2.5rem;
@@ -44,24 +59,13 @@
       text-align: center;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-
     .thank-you-box h1 {
       color: #28a745;
       font-size: 2.5rem;
       margin-bottom: 1rem;
     }
-
-    .thank-you-box p {
-      font-size: 1.2rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .details {
-      font-size: 0.95rem;
-      color: #555;
-      margin-bottom: 2rem;
-    }
-
+    .thank-you-box p { font-size: 1.2rem; margin-bottom: 1.5rem; }
+    .details { font-size: 0.95rem; color: #555; margin-bottom: 2rem; }
     .btn {
       padding: 10px 20px;
       font-size: 1rem;
@@ -72,11 +76,7 @@
       text-decoration: none;
       font-weight: bold;
     }
-
-    .btn:hover {
-      background-color: #0056b3;
-    }
-
+    .btn:hover { background-color: #0056b3; }
     .order-summary {
       background: #f9f9f9;
       padding: 20px;
@@ -87,84 +87,48 @@
       margin-left: auto;
       margin-right: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      font-family: "Segoe UI", sans-serif;
       color: #333;
     }
-
-    .order-summary h2 {
-      font-size: 24px;
-      margin-bottom: 15px;
-      color: #2c3e50;
-    }
-
-    .order-summary .item {
-      margin-bottom: 15px;
-    }
-
-    .order-summary strong {
-      color: #222;
-    }
+    .order-summary h2 { font-size: 24px; margin-bottom: 15px; color: #2c3e50; }
+    .order-summary .item { margin-bottom: 15px; }
+    .order-summary strong { color: #222; }
   </style>
 </head>
 
 <body>
-  <!-- ✅ GTM NoScript Fallback -->
+  <!-- 4️⃣  GTM <noscript> fallback -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55KCJGXT"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
 
-  <!-- ✅ Main Thank You Section -->
+  <!-- 5️⃣  Thank-you content -->
   <div class="thank-you-box">
     <h1>🎉 Thank You!</h1>
     <p>Your purchase was successful.</p>
 
     <div class="details">
-      <strong>Transaction ID:</strong> TXN123456<br />
-      <strong>Amount:</strong> ₹99.99<br />
+      <strong>Transaction ID:</strong> TXN123456<br>
+      <strong>Amount:</strong> $99.99<br>
       <strong>Status:</strong> Conversion Tracked via GA4
     </div>
 
     <div class="order-summary">
       <h2>Order Summary</h2>
       <div class="item">
-        <strong>Product:</strong> Premium Course Access<br />
-        <strong>SKU:</strong> SKU123<br />
-        <strong>Quantity:</strong> 1<br />
+        <strong>Product:</strong> Premium Course Access<br>
+        <strong>SKU:</strong> SKU123<br>
+        <strong>Quantity:</strong> 1<br>
         <strong>Price:</strong> $99.99
       </div>
       <div>
-        <strong>Total:</strong> $99.99<br />
-        <strong>Coupon:</strong> SUMMER25<br />
+        <strong>Total:</strong> $99.99<br>
+        <strong>Coupon:</strong> SUMMER25<br>
         <strong>Payment:</strong> Credit Card
       </div>
     </div>
 
     <a class="btn" href="index.html">← Back to Home</a>
   </div>
- <script>
-  window.onload = function () {
-    window.dataLayer = window.dataLayer || [];
-    window.dataLayer.push({
-      event: "purchase",
-      debug_mode: true,
-      ecommerce: {
-        transaction_id: "TXN123456",
-        value: 99.99,
-        currency: "USD",
-        coupon: "SUMMER25",
-        payment_type: "credit_card",
-        items: [
-          {
-            item_id: "SKU123",
-            item_name: "Premium Course Access",
-            price: 99.99,
-            quantity: 1
-          }
-        ]
-      }
-    });
-  };
-</script>
 </body>
 </html>
