--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
 
   <div class="section">
     <h2>1. Sign Up Section</h2>
-    <button onclick="gtag('event', 'signup_click', {
-      'event_category': 'engagement',
-      'event_label': 'Signup Button',
-      'value': 1
-    })">Sign Up Now</button>
+    <button id="sign-up-now>Sign Up Now</button>
   </div>
 
   <div class="section">
