--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="section">
     <h2>1. Sign Up Section</h2>
-    <button id="sign-up-now>  Sign Up Now </button>
+    <button id="sign-up-now">  Sign Up Now </button>
   </div>
 
   <div class="section">
