--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
       <button id="buyNowBtn">Buy Now</button>
     </a>
   </div>
+  <button class="learn-more"> LEARN MORE </button>
 </body>
 </html>
