--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
     </a>
   </div>
   <button class="learn-more"> LEARN MORE </button>
+  <a href="/budget-trackers" id="budgetLink">View Budget Trackers</a>
 </body>
 </html>
