--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <div class="section">
     <h2>3. Download Resource</h2>
-    <a href="#" id="downloadBtn">Download Brochure</a>
+    <a href="GA4 PRACTICE REPORTS.pdf" id="downloadBtn">Download Brochure</a>
   </div>
 
   <div class="section">
