Update index with figolla.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <button class="learn-more"> LEARN MORE </button>
   <a href="https://fitgear-seo-practice.netlify.app/budget-trackers" id="budgetLink">View Budget Trackers</a>
   <button
-    onclick="window.location.href='https://www.fwdslash.ai/?utm_source=linkedIn&utm_medium=linkedin+post&utm_campaign=fwdslash+sign+ups+tracking';"
+    onclick="window.location.href='https://glistening-figolla-e182a8.netlify.app/?utm_source=linkedIn&utm_medium=linkedin+post&utm_campaign=fwdslash+sign+ups+tracking';"
     style="padding:12px 20px; font-size:16px; background:#0a66c2; color:#fff; border:none; border-radius:6px; cursor:pointer;"
   >
     Visit fwdslash.ai from LinkedIn
